# runzip

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: cli.rs  lib.rs  main.rs
src/io/: http.rs  local.rs  mod.rs
src/zip/: extractor.rs  mod.rs  parser.rs  structures.rs
