[package]
name = "runzip"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "A Rust unzip utility with HTTP URL support using Range requests"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "io-std"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
anyhow = "1.0"
async-trait = "0.1"
byteorder = "1.5"
