[package]
name = "runzip"
version = "0.1.8"
authors = ["Ylarod <me@ylarod.cn>"]
repository = "https://github.com/Ylarod/runzip"
keywords = ["unzip", "http", "cli"]
categories = ["command-line-utilities"]
edition = "2024"
rust-version = "1.90"
description = "A Rust unzip utility with HTTP URL support using Range requests"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "io-std"] }
rustls = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
anyhow = "1.0"
async-trait = "0.1"
byteorder = "1.5"
flate2 = "1.0"

[profile.release]
strip = true
opt-level = "z"       # Minimize binary size
lto = true            # Link-time optimization
codegen-units = 1     # Maximum optimization
panic = "abort"       # Reduce binary size
